# vhf-sim

./: .appveyor.yml  .travis.yml  CMakeLists.txt  CPack.linux.local.cmake  CPack.local.cmake  CPack.osx.local.cmake  CPack.win32.local.cmake  README.md  appveyor.yml  index.html  osx-deploy.cmake.in
.travis/linux/: before_install.sh  before_script.sh  install.sh  script.sh
.travis/osx/: after_success.sh  before_install.sh  before_script.sh  script.sh
cmake/: CTags.cmake
data/simrad-rd68/: vhf.lua
lang/: de_DE.ts
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp  radio.cpp  version.cpp.in  version.hpp  version.hpp.in
src/action/: About.cpp  About.hpp  AboutQt.cpp  AboutQt.hpp  ExitApplication.cpp  ExitApplication.hpp  Fullscreen.cpp  Fullscreen.hpp
src/engine/: Angle.cpp  Angle.hpp  CMakeLists.txt  Controller.hpp  Date.cpp  Date.hpp  Directory.hpp  Engine.cpp  Engine.hpp  ErrorWriter.hpp  Latitude.cpp  Latitude.hpp  Longitude.cpp  Longitude.hpp  MMSI.cpp  MMSI.hpp  Model.hpp  Parser.hpp  Scanner.hpp  View.hpp  endian.hpp  msg.cpp  msg.hpp
src/lua/: CMakeLists.txt
src/lua/src/: Makefile
src/nmea/: CMakeLists.txt  nmea.cpp  nmea.hpp  nmea_sentence.cpp  nmea_sentence.hpp
src/util/: Button.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp
src/vhf/: Button.hpp  CMakeLists.txt  Circle.cpp  Circle.hpp  MainWindow.cpp  MainWindow.hpp  MsgSender.hpp  MsgSenderControlCenter.cpp  MsgSenderControlCenter.hpp  MsgSenderSocket.cpp  MsgSenderSocket.hpp  PeerModel.cpp  PeerModel.hpp  Rectangle.hpp  System.cpp  System.hpp  VHFPreferences.cpp  VHFPreferences.hpp  Widget.cpp  Widget.hpp  communicationshubwindow.cpp  communicationshubwindow.hpp  communicationshubwindow.ui  connectionpreferences.cpp  connectionpreferences.hpp  connectionpreferences.ui  controlcenter.cpp  controlcenter.hpp  controlcenter.ui  ether.cpp  etherwindow.cpp  etherwindow.hpp  etherwindow.ui  gpswindow.cpp  gpswindow.hpp  gpswindow.ui  main.cpp  platform.hpp  platform_linux.cpp  platform_osx.cpp  (+6 more)
src/vhf/icons/: vhf-main.xcf  vhf-main.xpm
tools/: build-vhf-docker.sh  build-vhf.sh
tools/docker/: build.sh  remove.sh  run.sh
tools/docker/ubuntu1604/: Dockerfile
tools/docker/ubuntu1804/: Dockerfile
tools/docker/ubuntu2004/: Dockerfile
